Fixed header on mobile.

--- a/src/pages/Editor/index.module.scss
+++ b/src/pages/Editor/index.module.scss
@@ -4,8 +4,6 @@
 
 .container {
   height: 100%;
-  display: flex;
-  flex-direction: column;
   background-color: $lightBackground;
   color: white;
 }
@@ -17,6 +15,7 @@
 .content {
   height: 100%;
   @include media-breakpoint-up(md) {
+    flex: 1 0 auto;
     display: flex;
   }
 }
